--- a/dojo_parks/apps/parks/templates/parks/darkparkinfo.html
+++ b/dojo_parks/apps/parks/templates/parks/darkparkinfo.html
@@ -32,7 +32,7 @@
 
 <body>
     <div class="container-fluid bg-dark">
-        <nav class="navbar navbar-dark bg-dark">
+        <nav class="navbar navbar-dark bg-dark border-bottom border-light">
             <h3 class="text-white">Dojo Parks</h3>
             <a href="/parks/infopage/{{selected_park.id}}" class = "ml-auto mr-3"><button class='btn btn-outline-info btn-sm'>Day Mode</button></a>
             <a class='ml-auto mr-3' href="/parks/darkmode">Home</a>
